--- a/src/compose.yml
+++ b/src/compose.yml
@@ -21,6 +21,8 @@ services:
     build:
       context: ./frontend
       dockerfile: Dockerfile
+      args:
+        - BACKEND_URL=http://backend:8080
     ports:
       - "3000:3000"
     environment:
